Bug #14049
closedloader.efi: fix console output after BS off
100%
Description
When Boot Services (BS) are switched off, we can not use BS functions any more. Since drawn console does implement our own Blt(), we can use it to draw the console.
However, SimpleTextOutput protocol based console output must be blocked.
FreeBSD version of this patch: https://cgit.freebsd.org/src/commit/?id=4c7a3a70e047fbba2a3ce4a0168eaf2baddca76b
and followup: https://reviews.freebsd.org/D31814
Tested by inserting printf() and panic() after ExitBootServices() call. The output from printf/panic is presented ok and we do not get register dump from panic().
Updated by Toomas Soome 11 months ago
- Description updated (diff)
Toomas Soome wrote:
When Boot Services (BS) are switched off, we can not use BS functions any more. Since drawn console does implement our own Blt(), we can use it to draw the console.
However, SimpleTextOutput protocol based console output must be blocked.
FreeBSD version of this patch: https://cgit.freebsd.org/src/commit/?id=4c7a3a70e047fbba2a3ce4a0168eaf2baddca76bTested by inserting printf() after ExitBootServices() call.
Updated by Electric Monk 11 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 190f051b526c1526e05ff7b598df8690980548b2
commit 190f051b526c1526e05ff7b598df8690980548b2 Author: Toomas Soome <tsoome@me.com> Date: 2021-09-12T17:17:17.000Z 14049 loader.efi: fix console output after BS off Reviewed by: Andy Fiddaman <andy@omnios.org> Reviewed by: Yuri Pankov <ypankov@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>