14049 loader.efi: fix console output after BS off Reviewed by: Andy Fiddaman <andy@omnios.org> Reviewed by: Yuri Pankov <ypankov@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>